--- a/public/controller.html
+++ b/public/controller.html
@@ -13,6 +13,6 @@
     <body>
         <div id="container">
         </div>
-        <script type="text/javascript" src="js/controller.js"></script>
+        <script type="text/javascript" src="js/compiled/controller.js"></script>
     </body>
 </html>
