--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
         <div id="container">
             <div id="game"></div>
         </div>
-        <script type="text/javascript" src="js/game.js"></script>
+        <script type="text/javascript" src="js/compiled/game.js"></script>
     </body>
 </html>
