--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="js/vendors/phaser/pixi.min.js"></script>
         <script type="text/javascript" src="js/vendors/phaser/phaser-no-libs.min.js"></script>
         <script type="text/javascript" src="js/vendors/phaser/phaser-arcade-physics.min.js"></script>
+        <script type="text/javascript" src="js/vendors/phaser/phaser.min.js"></script>
         <script type="text/javascript" src="socket.io/socket.io.js"></script>
     </head>
     <body>
@@ -14,5 +15,8 @@
             <div id="game"></div>
         </div>
         <script type="text/javascript" src="js/compiled/game.js"></script>
+        <script type="text/javascript" src="js/compiled/config.js"></script>
+        <script type="text/javascript" src="js/compiled/preload.js"></script>
+        <script type="text/javascript" src="js/compiled/load.js"></script>
     </body>
 </html>
