--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
         <div id="container">
             <div id="game"></div>
         </div>
-        <script type="text/javascript" src="js/compiled/game.js"></script>
         <script type="text/javascript" src="js/compiled/config.js"></script>
         <script type="text/javascript" src="js/compiled/preload.js"></script>
-        <script type="text/javascript" src="js/compiled/load.js"></script>
+        <script type="text/javascript" src="js/compiled/setup.js"></script>
+        <script type="text/javascript" src="js/compiled/main.js"></script>
+        <script type="text/javascript" src="js/compiled/game.js"></script>
     </body>
 </html>
