Add score table display

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
         <div id="container">
             <div id="game"></div>
         </div>
+        <div id='scoretable'>
+        </div>
         <script type="text/javascript" src="js/bigscreen.js"></script>
     </body>
 </html>
