Implement teams + conditional start. Fixes #13, fixes #15
-Add logic for waiting until X players have joined.
-Move config to higher level directory
-Fix bug in team generator for nonasymmetric teams
-Add team scores
-Add UI text for game timer + end game

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Our game</title>
+        <link rel="stylesheet" href="css/bigscreen.css">
 
         <script type="text/javascript" src="js/vendors/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="js/vendors/phaser/build/phaser.min.js"></script>
@@ -10,8 +11,8 @@
     <body>
         <div id="container">
             <div id="game"></div>
-        </div>
-        <div id='scoretable'>
+            <table id='scoretable'>
+            </table>
         </div>
         <script type="text/javascript" src="js/bigscreen.js"></script>
     </body>
