Visual indicators on controller side for teammates + bug fixes

--- a/app/controller.html
+++ b/app/controller.html
@@ -11,6 +11,10 @@
     <body>
         <div id="container">
         </div>
+        <table id='teammates-table'>
+            Teammates:
+            <tr id ='teammates'></tr>
+        </table>
         <script type="text/javascript" src="js/controller.js"></script>
     </body>
 </html>
