--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,11 @@
     <body>
         <div id="container">
             <div id="game"></div>
-            <table id='scoretable'>
-            </table>
+            <div id='state'>
+                <div id = 'timer'>Time left: <span id='timerText'>?</span> ms</div>
+                <table id='scoretable'>
+                </table>
+            </div>
         </div>
         <script type="text/javascript" src="js/bigscreen.js"></script>
     </body>
