Move team score logic to controller. Fixes #21 and fixes #23

--- a/app/controller.html
+++ b/app/controller.html
@@ -13,8 +13,16 @@
         </div>
         <table id='teammates-table'>
             Teammates:
-            <tr id ='teammates'></tr>
+            <tr id ='teammates'>Not yet determined</tr>
         </table>
+        <div>
+            <div>
+            Score: <span id = 'my-score'>0</span>
+            </div>
+            <div>
+            Team score: <span id = 'team-score'>0</span>
+            </div>
+        </div>
         <script type="text/javascript" src="js/controller.js"></script>
     </body>
 </html>
