Add ammo system

--- a/app/controller.html
+++ b/app/controller.html
@@ -11,10 +11,18 @@
     <body>
         <div id="container">
         </div>
-        <table id='teammates-table'>
+        <div>
             Teammates:
-            <tr id ='teammates'>Not yet determined</tr>
-        </table>
+            <table id='teammates-table'>
+                <tr id ='teammates'><td>Not yet determined</td></tr>
+            </table>
+        </div>
+
+        <div>
+            Bullet count:
+            <span id = 'num-bullets'></span>
+        </div>
+
         <div>
             <div>
             Score: <span id = 'my-score'>0</span>
