Change timer to min, sec. Fixes #32

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
         <div id="container">
             <div id="game"></div>
             <div id='state'>
-                <div id = 'timer'>Time left: <span id='timerText'>?</span> ms</div>
+                <div id = 'timer'>Time left: <span id='timerText'>?</span></div>
                 <table id='scoretable'>
                 </table>
             </div>
