Add ready buttons. Fixes #29

--- a/app/controller.html
+++ b/app/controller.html
@@ -26,6 +26,10 @@
             Team score: <span id = 'team-score'>0</span>
             </div>
         </div>
+
+        <div>
+           <button id ='ready'>Send ready</button>
+        </div>
         <script type="text/javascript" src="js/controller.js"></script>
     </body>
 </html>
