--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
             <div id="game"></div>
             <div id='state'>
                 <div id = 'timer'>Time left: <span id='timerText'>?</span></div>
+                <table id='readytable'>
+                </table>
                 <table id='scoretable'>
                 </table>
             </div>
