Added death timer countdown. Fixed #20

--- a/app/controller.html
+++ b/app/controller.html
@@ -9,6 +9,8 @@
         <script type="text/javascript" src="socket.io/socket.io.js"></script>
     </head>
     <body>
+        <div id='death-timer-countdown'>
+        </div>
         <div id="container">
         </div>
         <div>
