Finished impl favicon and name

--- a/app/controller.html
+++ b/app/controller.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Our game</title>
+		<title>Pew Pew</title>
         <link rel="stylesheet" href="css/controller.css">
 
         <script type="text/javascript" src="js/vendors/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="js/vendors/phaser/build/phaser.min.js"></script>
         <script type="text/javascript" src="socket.io/socket.io.js"></script>
+        <link rel="icon" type="image/ico" href="assets/icon/pewpew.ico">
     </head>
     <body>
         <div id="container">
