change font loading from webfonts to local file

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Pew Pew</title>
+        <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/bigscreen.css">
 
         <script type="text/javascript" src="js/vendors/jquery/dist/jquery.min.js"></script>
